--- a/Onetez.Web/Views/Sheet/Process.cshtml
+++ b/Onetez.Web/Views/Sheet/Process.cshtml
@@ -98,7 +98,7 @@
 @using (Html.BeginForm())
 {
   <ul class="columns is-multiline is-variable is-1" style="margin-bottom: 1rem;">
-    <li class="column is-narrow" style="width: 220px;">
+    <li class="column is-narrow" style="width: 150px;">
       @Html.TextBox("product", (string)ViewBag.Product,
         new { @class = "input is-small", placeholder = TextData.Get("Sản phẩm"), list = "products", @autocomplete = "off" })
       <datalist id="products">
@@ -153,7 +153,7 @@
         <div class="control">
           <label class="button is-small is-static">@TextData.Get("Từ ngày")</label>
         </div>
-        <div class="control is-expanded" style="width: 130px;">
+        <div class="control is-expanded" style="width: 110px;">
           @Html.TextBox("start", (string)ViewBag.DateStart, new { @class = "input is-small", type = "date" })
         </div>
       </div>
@@ -163,7 +163,7 @@
         <div class="control">
           <label class="button is-small is-static">@TextData.Get("Đến ngày")</label>
         </div>
-        <div class="control is-expanded" style="width: 130px;">
+        <div class="control is-expanded" style="width: 110px;">
           @Html.TextBox("end", (string)ViewBag.DateEnd, new { @class = "input is-small", type = "date" })
         </div>
       </div>
@@ -177,6 +177,9 @@
       </button>
       @Html.Hidden("shopId", shop)
     </li>
+    <li class="column has-text-right">
+      <a class="button is-danger is-small" onclick="moveToUnprocessed()">Moved to unprocessed</a>
+    </li>
   </ul>
 }
 
@@ -184,8 +187,13 @@
   <table id="list_sheet" class="table is-hoverable is-vcentered is-size-7">
     <thead>
       <tr>
-        <th width="120px" class="is_sticky" style="left: 1px;">@TextData.Get("Khách hàng")</th>
-        <th width="100px" class="is_sticky is_last" style="left: 121px;">@TextData.Get("Điện thoại")</th>
+        <th width="140px" class="is_sticky" style="left: 1px;">
+          <label class="checkbox">
+            <input type="checkbox" class="js_cb_all mr-1" data-group="sheet">
+            <span>@TextData.Get("Khách hàng")</span>
+          </label>
+        </th>
+        <th width="100px" class="is_sticky is_last" style="left: 141px;">@TextData.Get("Điện thoại")</th>
         <th width="600px">
           <span class="is-inline-block mr-5 pr-3">State</span>
           <span class="is-inline-block mr-3">City/District</span>
@@ -220,9 +228,12 @@
 
         <tr id="row_@item.Id">
           <td class="is_sticky" style="left: 1px;">
-            <div class="text_1line" style="width: 109px;">@item.Name</div>
+            <label class="checkbox" style="display: flex;">
+              <input type="checkbox" class="js_cb_list mr-1" data-id="@item.Id" data-group="sheet">
+              <span class="text_1line" style="max-width: 110px;">@item.Name</span>
+            </label>
           </td>
-          <td class="is_sticky is_last" style="left: 121px;">
+          <td class="is_sticky is_last" style="left: 141px;">
             <div class="js_copy has-text-link has-text-weight-semibold" data-clipboard-text="@item.Phone">@item.Phone</div>
             <div id="msg_@item.Id" class="is-family-code has-text-danger">
               @item.Error
